--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "css-toggle-switch": "^4.1.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "firebase": "^7.2.3",
+    "font-awesome": "^4.7.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-media": "^1.10.0",
     "react-native": "0.45.1",
     "react-redux": "^6.0.0",
     "react-redux-spinner": "^2.0.0",
