--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "enzyme-adapter-react-16": "^1.15.1",
     "firebase": "^7.2.3",
     "font-awesome": "^4.7.0",
+    "node-sass": "^4.13.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-media": "^1.10.0",
@@ -48,17 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.7.1",
-    "babel-jest": "^24.9.0",
-    "enzyme": "^3.10.0",
-    "jest": "^20.0.4",
-    "jest-fetch-mock": "^2.1.2",
-    "jest-webpack": "^0.5.1",
-    "react-test-renderer": "^16.0.0-alpha.12",
+    "jest": "^24.9.0",
     "redux-mock-store": "^1.5.3"
-  },
-  "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
-  ]
+  }
 }
