--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "enzyme-adapter-react-16": "^1.15.1",
     "firebase": "^7.2.3",
     "font-awesome": "^4.7.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
